# haskgit

./: Author.hs  Blob.hs  Commit.hs  Database.hs  Entry.hs  LICENSE  Lockfile.hs  Main.hs  README.md  Refs.hs  Tree.hs  Util.hs  Workspace.hs  haskgit.cabal  tags
Database/: Author.hs  Tree.hs
src/: Command.hs  Database.hs  Entry.hs  Index.hs  Lockfile.hs  Main.hs  Refs.hs  Repository.hs  TestMain.hs  Util.hs  Workspace.hs  test-executable-file
src/Command/: Add.hs  Base.hs  Commit.hs  Init.hs  Status.hs
src/Database/: Author.hs  Blob.hs  Commit.hs  Tree.hs
src/Index/: Checksum.hs  Entry.hs
src/Tests/: Command.hs  CommandHelper.hs  Index.hs
src/Tests/Command/: Add.hs  Status.hs
src/Util/: Hash.hs
