name:                haskgit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/QuietMisdreavus/haskgit#readme
license:             BSD3
license-file:        LICENSE
author:              QuietMisdreavus
maintainer:          grey@quietmisdreavus.net
copyright:           2020 QuietMisdreavus
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskgit
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Database,
                       Database.Author,
                       Database.Blob,
                       Database.Commit,
                       Database.Tree,
                       Index,
                       Index.Entry,
                       Entry,
                       Lockfile,
                       Refs,
                       Util,
                       Util.Hash,
                       Workspace
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       bytestring,
                       cryptonite,
                       zlib,
                       time,
                       extra,
                       containers,
                       unix,
                       memory
