cabal-version:       2.2
name:                haskgit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/QuietMisdreavus/haskgit#readme
license:             MPL-2.0
license-file:        LICENSE
author:              QuietMisdreavus
maintainer:          grey@quietmisdreavus.net
copyright:           2020 QuietMisdreavus
category:            Web
build-type:          Simple
extra-source-files:  README.md

common build-info
  ghc-options:         -W -Wmissing-export-lists
  other-modules:       Database,
                       Database.Author,
                       Database.Blob,
                       Database.Commit,
                       Database.Tree,
                       Index,
                       Index.Checksum,
                       Index.Entry,
                       Entry,
                       Lockfile,
                       Refs,
                       Util,
                       Util.Hash,
                       Workspace
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       bytestring,
                       cryptonite,
                       zlib,
                       time,
                       extra,
                       containers,
                       unix,
                       memory,
                       binary

executable haskgit
  import:              build-info
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite unit
  import:              build-info
  type:                exitcode-stdio-1.0
  other-modules:       Tests.Index
  build-depends:       HUnit,
                       random
  hs-source-dirs:      src
  main-is:             TestMain.hs
  default-language:    Haskell2010
